assets/proj.css
#info { text-align: center
      ; margin: 1em auto
      ; padding: 1em
      ; border: solid 1px #ccc
      ; width: 90%
      ; max-width: 950px
      ; background-color: #fff
      ; -moz-border-radius: 20px
      ; -webkit-border-radius: 20px
      ; border-radius: 20px
      ; behavior: url(../assets/border-radius.htc)
      ; behavior: url(../../assets/border-radius.htc)
      }

h4 { margin: 0.5em 0 0.7em }

#info > div { text-align: center
            ; font-size: 1.3em
            ; width: 31%
            ; max-width: 400px
            ; float: left
            ; display: inline
            ; padding: 0.5em 0.2em
            ; border-left: dashed 1px #aaa
            }

#info > div:first-child { border-left: none }

#info > br.clear { clear: both }

@media only screen and (max-device-width:480px) {
  #info { width: 70%
        ; padding: 0 1em
        }

  #info > div { clear: left
              ; width: 100%
              ; max-width: 100%
              ; padding: 0.5em 0.2em 1em
              ; border-left: none
              ; font-size: 1em
              }
}

#contributors-box a { line-height: 1.8em }

